Adding social plugins to player page.

--- a/app/views/player.html
+++ b/app/views/player.html
@@ -20,7 +20,7 @@
           {% try %}
           <img id="prev" src="{{ static_url(prev["img"]) }}"/>
           {% except %}
-          <img id="prev" src="{{ static_url("/images/no_video.png") }}"/>
+          <img id="prev" src="{{ static_url("images/proposes.jpg") }}"/>
           {% end %}
         </td>
         <td></td>
@@ -28,7 +28,7 @@
           {% try %}
           <img id="next" src="{{ static_url(next["img"]) }}"/>
           {% except %}
-          <img id="next" src="{{ static_url("/images/no_video.png") }}"/>
+          <img id="next" src="{{ static_url("images/proposes.jpg") }}"/>
           {% end %}
         </td>
       </tr>
