--- a/app/views/player.html
+++ b/app/views/player.html
@@ -14,7 +14,7 @@
         <td>
           <div id="vtype" style="display: none">{{ video['type'] }}</div>
           <div id="vdata" style="display: none">{{ video['data'] }}</div>
-          <img id="play" onclick="play" src="{{ video["img"] }}"/>
+          <img id="player" onclick="play()" src="{{ video["img"] }}"/>
         </td>
       </tr>
       <tr>
