Player page image previews should be working.

--- a/app/views/player.html
+++ b/app/views/player.html
@@ -36,9 +36,9 @@
         </td>
       </tr>
       <tr>
-        <td>{% if prev != None %}<a href="/player?v={{prev}}">Previous</a>{% end %}</td>
+        <td>{% if prev != None %}<a href="/player?v={{prev}}"><button>Previous</button></a>{% end %}</td>
         <td></td>
-        <td>{% if next != None %}<a href="/player?v={{next}}">Next</a>{% end %}</td>
+        <td>{% if next != None %}<a href="/player?v={{next}}"><button>Next</button></a>{% end %}</td>
       </tr>
       <tr>
         <td></td>
