--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -71,10 +71,8 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 
 #player-page { width: 950px; margin: 0px auto; }
 #player-page h1 { margin: 1em 75px; color: #FBB829; }
-#player-page #play { width: 550px; height: 320px; }
-#player-page #prev, #player-page #next { 
-  width: 100px; margin: 0 50px; position: relative; top: -50px; 
-}
+#player-page .left, player-page .right { width: 150px; }
+#player-page button { margin: 100px auto 0; }
 
 #landing { display: table; width: 950px; margin: 0 auto; }
 #landing h1 { padding: 50px 0; text-align: center; font-weight: bold; font-size: 90px; color: #FBB829; }
