--- a/app/views/player.html
+++ b/app/views/player.html
@@ -10,7 +10,7 @@
     <h1>{{ video["title"] }}<br/><fb:like></fb:like></h1>
     <table>
       <tr>
-        <td></td>
+        <td class="left">{% if prev != None %}<a href="/player?v={{prev}}"><button>Previous</button></a>{% end %}</td>
         <td>
           {% if video['type'] == 'youtube' %}
             <object width="550" height="308">
@@ -34,11 +34,7 @@
             </object>
           {% end %}
         </td>
-      </tr>
-      <tr>
-        <td>{% if prev != None %}<a href="/player?v={{prev}}"><button>Previous</button></a>{% end %}</td>
-        <td></td>
-        <td>{% if next != None %}<a href="/player?v={{next}}"><button>Next</button></a>{% end %}</td>
+        <td class="right">{% if next != None %}<a href="/player?v={{next}}"><button>Next</button></a>{% end %}</td>
       </tr>
       <tr>
         <td></td>
