--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -71,7 +71,7 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 
 #player-page { width: 950px; margin: 0px auto; }
 #player-page h1 { margin: 1em 75px; color: #FBB829; }
-#player-page .left, player-page .right { width: 150px; }
+#player-page .left, #player-page .right { width: 150px; }
 #player-page button { margin: 100px auto 0; }
 
 #landing { display: table; width: 950px; margin: 0 auto; }
