Player page image previews should be working.

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -71,8 +71,7 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 
 #player-page { width: 950px; margin: 0px auto; }
 #player-page h1 { margin: 1em 75px; color: #FBB829; }
-#player-page .left, #player-page .right { width: 150px; position: relative; }
-#player-page .left a, #player-page .right a { position: absolute; top: 100px; margin: 0 auto; }
+#player-page .left, #player-page .right { display: block; margin: 0 auto; }
 
 #landing { display: table; width: 950px; margin: 0 auto; }
 #landing h1 { padding: 50px 0; text-align: center; font-weight: bold; font-size: 90px; color: #FBB829; }
