--- a/app/views/player.html
+++ b/app/views/player.html
@@ -10,11 +10,7 @@
     <h1>{{ video["title"] }}<br/><fb:like></fb:like></h1>
     <table>
       <tr>
-        <td >
-          {% if prev != None %}
-          <div class="left"><a href="/player?v={{prev}}"><button>Previous</button></a></div>
-          {% end %}
-        </td>
+        <td>{% if prev != None %}<a class="left" href="/player?v={{prev}}"><button>Previous</button></a>{% end %}</td>
         <td>
           {% if video['type'] == 'youtube' %}
             <object width="550" height="308">
@@ -38,11 +34,7 @@
             </object>
           {% end %}
         </td>
-        <td>
-          {% if next != None %}
-          <div class="right"><a href="/player?v={{next}}"><button>Next</button></a></div>
-          {% end %}
-        </td>
+        <td>{% if next != None %}<a class="right" href="/player?v={{next}}"><button>Next</button></a>{% end %}</td>
       </tr>
       <tr>
         <td></td>
