--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -74,7 +74,7 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 #player-page .left, #player-page .right { display: block; width: 150px; }
 #player-page .left button { float: right; margin-right: 50px; }
 #player-page .right button { float: left; margin-left: 50px; }
-#player-page tr { margin-button: 50px; }
+#player-page fb:comments { margin-top: 50px; }
 
 #landing { display: table; width: 950px; margin: 0 auto; }
 #landing h1 { padding: 50px 0; text-align: center; font-weight: bold; font-size: 90px; color: #FBB829; }
