Player page image previews should be working.

--- a/app/views/_navbar.html
+++ b/app/views/_navbar.html
@@ -2,7 +2,8 @@
   <div>
     <span>{{title}}</span>
     <a href="/">Home</a>
+    <a href="/lists">Lists</a>
     <a href="/friends">Friends</a>
-    <a >Account</a>
+    <a href="/account">Account</a>
   </div>
 </div>
