Player page image previews should be working.

--- a/app/views/_navbar.html
+++ b/app/views/_navbar.html
@@ -4,6 +4,10 @@
     <a href="/">Home</a>
     <a href="/lists">Lists</a>
     <a href="/friends">Friends</a>
-    <a href="/account">Account</a>
+    <a href="#" class="toggle">Account
+      <ul>
+        <li><a onclick="logout()">Logout</a></li>
+      </ul>
+    </a>
   </div>
 </div>
