--- a/app/views/player.html
+++ b/app/views/player.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block pre %}
-  {% set title = '%s (%s)' % (video['group'],video['order']) %}
+  {% set title = video['list'] %}
 {% end %}
 
 {% block body %}
