--- a/app/views/player.html
+++ b/app/views/player.html
@@ -10,7 +10,7 @@
     <h1>{{ video["title"] }}<br/><fb:like></fb:like></h1>
     <table>
       <tr>
-        <td>{% if prev != None %}<a class="left" href="/player?v={{prev}}"><button>Previous</button></a>{% end %}</td>
+        <td><a class="left" href="/player?v={{prev}}">{% if prev != None %}<button>Previous</button>{% end %}</a></td>
         <td>
           {% if video['type'] == 'youtube' %}
             <object width="550" height="308">
@@ -34,7 +34,7 @@
             </object>
           {% end %}
         </td>
-        <td>{% if next != None %}<a class="right" href="/player?v={{next}}"><button>Next</button></a>{% end %}</td>
+        <td><a class="right" href="/player?v={{next}}">{% if next != None %}<button>Next</button>{% end %}</a></td>
       </tr>
       <tr>
         <td></td>
