Working on logout styles.

--- a/app/views/_navbar.html
+++ b/app/views/_navbar.html
@@ -5,9 +5,9 @@
     <a href="/lists">Lists</a>
     <a href="/friends">Friends</a>
     <a href="#" class="toggle">Account
-      <ul>
-        <li><a onclick="logout()">Logout</a></li>
-      </ul>
+      <div class="dropdown">
+        <a onclick="logout()">Logout</a></li>
+      </div>
     </a>
   </div>
 </div>
