--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -68,9 +68,9 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 #navbar span { float: left; margin-left: 2em; }
 #navbar a { padding: 0.5em 1em; color: #FFF; border: 1px solid #FFF; }
 #navbar a:hover, #navbar a.clicked { background-color: #7FFF24; text-decoration: none; }
-#navbar ul { display: none; }
-#navbar ul a { border: none; }
-#navbar .clicked ul { display: block; background-color: #FFF; padding: 0.5em 1em; color: #333; }
+#navbar .dropdown { display: none; }
+#navbar .dropdown a { border: none; }
+#navbar .clicked .dropdown { display: block; background-color: #FFF; padding: 0.5em 1em; color: #333; }
 
 #player-page { width: 950px; margin: 0px auto; }
 #player-page h1 { margin: 1em 75px; color: #FBB829; }
