Working on logout styles.

--- a/app/views/_navbar.html
+++ b/app/views/_navbar.html
@@ -4,10 +4,11 @@
     <a href="/">Home</a>
     <a href="/lists">Lists</a>
     <a href="/friends">Friends</a>
-    <a href="#" class="toggle">Account
+    <div class="toggle">
+      <a href="#" class="toggle">Account</a>
       <div class="dropdown">
         <a onclick="logout()">Logout</a></li>
       </div>
-    </a>
+    </div>
   </div>
 </div>
