--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -71,7 +71,7 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 #navbar .toggle { display: inline; }
 #navbar .dropdown { display: none; }
 #navbar .dropdown a { border: none; }
-#navbar .clicked .dropdown { display: block; background-color: #FFF; padding: 0.5em 1em; color: #333; }
+#navbar .clicked .dropdown { display: block; background-color: #FBB829; padding: 0.5em 1em; color: #FFF; }
 
 #player-page { width: 950px; margin: 0px auto; }
 #player-page h1 { margin: 1em 75px; color: #FBB829; }
