Working on logout styles.

--- a/app/views/_navbar.html
+++ b/app/views/_navbar.html
@@ -5,7 +5,7 @@
     <a href="/lists">Lists</a>
     <a href="/friends">Friends</a>
     <div class="toggle">
-      <a href="#">Account</a>
+      <a href="#">Account</a><br/>
       <div class="dropdown">
         <a onclick="logout()">Logout</a></li>
       </div>
