--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -69,7 +69,8 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 #navbar > div > a, #navbar .toggle > a { padding: 0.5em 1em; color: #FFF; border: 1px solid #FFF; }
 #navbar > div > a:hover, #navbar .toggle > a:hover, #navbar .clicked > a { background-color: #7FFF24; text-decoration: none; }
 #navbar .toggle { display: inline; }
-#navbar .dropdown { display: none; float: right; }
+#navbar .clicked > a { z-index: 2 }
+#navbar .dropdown { display: none; float: right; width: 150px; z-index: 1; }
 #navbar .clicked .dropdown { display: block; background-color: #FBB829; padding: 0.5em 1em; color: #FFF; }
 
 #player-page { width: 950px; margin: 0px auto; }
