--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -69,7 +69,7 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 #navbar > div > a, #navbar .toggle > a { padding: 0.5em 1em; color: #FFF; border: 1px solid #FFF; }
 #navbar > div > a:hover, #navbar .toggle > a:hover, #navbar .clicked > a { background-color: #7FFF24; text-decoration: none; }
 #navbar .toggle { display: inline; }
-#navbar .clicked > a, #navbar .clicked a:hover {
+#navbar .clicked > a, #navbar .clicked > a:hover {
   background-color:#FBB829;
   border-bottom:1px solid #FBB829;
   padding-bottom:2px;
