Working on logout styles.

--- a/app/views/_navbar.html
+++ b/app/views/_navbar.html
@@ -7,7 +7,7 @@
     <div class="toggle">
       <a href="#">Account</a><br/>
       <div class="dropdown">
-        <a onclick="logout()">Logout</a></li>
+        <a href="#" onclick="logout()">Logout</a></li>
       </div>
     </div>
   </div>
