--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -22,7 +22,7 @@
   </div>
 
   <ul class="right">
-    <li><iframe src="http://www.facebook.com/plugins/recommendations.php?site=http%3Amengomengo.com&amp;width=300&amp;height=300&amp;header=false&amp;colorscheme=light&amp;font&amp;border_color=%23FBB829" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:300px; height:300px;" allowTransparency="true"></iframe></li>
+    <li><iframe src="http://www.facebook.com/plugins/recommendations.php?site=http%3Amengomengo.com&amp;width=250&amp;height=300&amp;header=true&amp;colorscheme=light&amp;font&amp;border_color" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:250px; height:300px;" allowTransparency="true"></iframe></li>
     <li>Ads go here</li>
     <li>Ads go here</li>
   </ul>
