--- a/app/views/player.html
+++ b/app/views/player.html
@@ -7,7 +7,9 @@
 {% block body %}
   {% include "_navbar.html" %}
   <div id="player-page">
-    <h1>{{ video["title"] }}<br/><fb:like></fb:like></h1>
+    <h1>{{ video["title"] }}<br/>
+      <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fmengomengo.com&amp;layout=standard&amp;show_faces=true&amp;width=450&amp;action=like&amp;font&amp;colorscheme=light&amp;height=80" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:80px;" allowTransparency="true"></iframe>
+    </h1>
     <table>
       <tr>
         <td><a class="left" href="/player?v={{prev}}">{% if prev != None %}<button>Previous</button>{% end %}</a></td>
