--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "_/base.html" %}
 {% block body %}
-  {% include "_navbar.html" %}
+  {% include "_/navbar.html" %}
 
 <div id="wall">
 
