--- a/app/views/_/base.html
+++ b/app/views/_/base.html
@@ -8,6 +8,7 @@
     <meta property="fb:app_id" content="204128796282802" />
     <title>{{title}}</title>
     <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
   </head>
 
   <body>
@@ -20,7 +21,11 @@
     <script src="{{ static_url("javascript/main.js") }}"></script>
     <script>
       FB.init({appId: '204128796282802', status: true, cookie: true, xfbml: true});
-      jQuery(document).ready(function($) { $('a[rel*=facebox]').facebox() });
+      jQuery(document).ready(function($) { 
+        $('a[rel*=facebox]').facebox();
+        $.facebox.settings.closeImage = '/static/images/closelabel.png'
+        $.facebox.settings.loadingImage = '/static/images/loading.gif'
+      });
       {% block javascript %}{% end %}
     </script>
 
