Adapting facebox to the site color scheme.

--- a/app/views/_/base.html
+++ b/app/views/_/base.html
@@ -7,7 +7,7 @@
     <meta property="fb:admins" content="100000273342150" />
     <meta property="fb:app_id" content="204128796282802" />
     <title>{{title}}</title>
-    <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ static_url('styles/facebox.css') }}"/>
     <link rel="stylesheet" type="text/css" href="{{ static_url('styles/main.css') }}"/>
   </head>
 
