--- a/app/views/_/base.html
+++ b/app/views/_/base.html
@@ -22,9 +22,9 @@
     <script>
       FB.init({appId: '204128796282802', status: true, cookie: true, xfbml: true});
       jQuery(document).ready(function($) { 
+        $.facebox.settings.closeImage = '/static/images/closelabel.png';
+        $.facebox.settings.loadingImage = '/static/images/loading.gif';
         $('a[rel*=facebox]').facebox();
-        $.facebox.settings.closeImage = '/static/images/closelabel.png'
-        $.facebox.settings.loadingImage = '/static/images/loading.gif'
       });
       {% block javascript %}{% end %}
     </script>
