Fixed multiple close button bug

--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -18,6 +18,9 @@
           <td><label for="description">Description</label></td>
           <td><textbox id="description" name="description"/></textbox></td>
         </tr>
+        <tr>
+          <td></td>
+          <td><input type="submit" value="Upload"/></td>
       </table>
     </form>
   </body>
