--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -7,7 +7,7 @@
   <div class="left feed">
     <div class="clearfix">
       <h2>News Feed</h2>
-      <a href="/" rel="facebox"><button>Upload a Video</button></a>
+      <a href="/upload" rel="facebox"><button>Upload a Video</button></a>
     </div>
     <ul class="list">
       {% for video in [ {'group':'Naruto', 'order':'Episode 22', 'title':'Fight to the death!', 'img':'x' }, {'group':'iJustine', 'order':'Episode 67', 'title':'Why am I glowing?', 'img':'x'} ] %}
