--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -28,6 +28,7 @@
     <script src="http://connect.facebook.net/en_US/all.js#appId=204128796282802&amp;xfbml=1"></script>
     <script>
       FB.init({appId: '204128796282802', status: true, cookie: true, xfbml: true});
+      $('#access_token').val( FB.getSession().access_token )
     </script>
   </body>
 </html>
