--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -1,4 +1,4 @@
-<form enctype="multipart/form-data" action="http://api-video.facebook.com/method/video.upload">
+<form enctype="multipart/form-data" action="https://api-video.facebook.com/method/video.upload">
   <input type="hidden" id="access_token" name="access_token" value=""/>
   <table>
     <tr>
