Fixed multiple close button bug

--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -3,7 +3,7 @@
   <table>
     <tr>
       <td><label for="file">Upload a file</label></td>
-      <td><input type="file" id="file" size="30"/>
+      <td><input type="file" id="file" name="[no name]" size="30"/>
     </tr>
     <tr>
       <td><label for="title">Title</label></td> 
