--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -1,4 +1,4 @@
-<form id="video-upload" enctype="multipart/form-data" action="https://api-video.facebook.com/method/video.upload">
+<form id="video-upload" target="video_upload" enctype="multipart/form-data" action="https://api-video.facebook.com/method/video.upload">
   <input type="hidden" id="access_token" name="access_token" value=""/>
   <iframe id="upload_target" name="upload_target" src="" style="display: none"></iframe>
   <table>
@@ -26,7 +26,6 @@
 <script> 
   $('#access_token').val( FB.getSession().access_token );
   document.getElementById("video-upload").onsubmit=function() {
-    document.getElementById("video-upload").target = "upload_target";
     document.getElementById("upload_target").onload = function(){ alert('file upload success') };
   }
 </script>
