Fixed multiple close button bug

--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -1,4 +1,4 @@
-<form id="video-upload" target="video_upload" enctype="multipart/form-data" action="https://api-video.facebook.com/method/video.upload">
+<form id="video-upload" target="upload_target" enctype="multipart/form-data" action="https://api-video.facebook.com/method/video.upload">
   <input type="hidden" id="access_token" name="access_token" value=""/>
   <iframe id="upload_target" name="upload_target" src="" style="display: none"></iframe>
   <table>
