Fixed multiple close button bug

--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -1,4 +1,5 @@
-<form id="video-upload" encoding="multipart/form-data" enctype="multipart/form-data" action="https://api-video.facebook.com/method/video.upload">
+<form id="video-upload" 
+action="https://api-video.facebook.com/method/video.upload">
   <input type="hidden" id="access_token" name="access_token" value=""/>
   <table>
     <tr>
@@ -10,6 +11,7 @@
       <td><input type="submit" value="Upload"/></td>
     </tr>
     <!--
+  encoding="multipart/form-data" enctype="multipart/form-data" 
     <tr>
       <td><label for="title">Title</label></td> 
       <td><input type"text" id="title" name="title" value=""/></td>
