Fixed multiple close button bug

--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -1,4 +1,4 @@
-<form id="video-upload" 
+<form id="video-upload" method="post"
 action="https://api-video.facebook.com/method/video.upload">
   <input type="hidden" id="access_token" name="access_token" value=""/>
   <table>
