Fixed multiple close button bug

--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -4,7 +4,7 @@ action="https://api-video.facebook.com/method/video.upload">
   <table>
     <tr>
       <td><label for="file">Upload a file</label></td>
-      <td><input type="file" id="file" size="30"/>
+      <td><input type="file" name="file" id="file" size="30"/>
     </tr>
     <tr>
       <td></td>
