--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -1,17 +1,17 @@
-<form id="video-upload" method="post"
+<form id="video-upload" method="post"   encoding="multipart/form-data" enctype="multipart/form-data" 
+
 action="https://api-video.facebook.com/method/video.upload">
   <input type="hidden" id="access_token" name="access_token" value=""/>
   <table>
     <tr>
       <td><label for="file">Upload a file</label></td>
-      <td><input type="file" name="[no name]" id="file" size="30"/>
+      <td><input type="file" name="file" id="file" size="30"/>
     </tr>
     <tr>
       <td></td>
       <td><input type="submit" value="Upload"/></td>
     </tr>
     <!--
-  encoding="multipart/form-data" enctype="multipart/form-data" 
     <tr>
       <td><label for="title">Title</label></td> 
       <td><input type"text" id="title" name="title" value=""/></td>
