Fixed multiple close button bug

--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -4,15 +4,6 @@ action="https://api-video.facebook.com/method/video.upload">
   <input type="hidden" id="access_token" name="access_token" value=""/>
   <table>
     <tr>
-      <td><label for="file">Upload a file</label></td>
-      <td><input type="file" name="file" id="file" size="30"/>
-    </tr>
-    <tr>
-      <td></td>
-      <td><input type="submit" value="Upload"/></td>
-    </tr>
-    <!--
-    <tr>
       <td><label for="title">Title</label></td> 
       <td><input type"text" id="title" name="title" value=""/></td>
     </tr>
@@ -20,6 +11,15 @@ action="https://api-video.facebook.com/method/video.upload">
       <td><label for="description">Description</label></td>
       <td><textarea id="description" name="description"/></textarea></td>
     </tr>
+    <tr>
+      <td><label for="file">Upload a file</label></td>
+      <td><input type="file" name="file" id="file" size="30"/>
+    </tr>
+    <tr>
+      <td></td>
+      <td><input type="submit" value="Start Upload"/></td>
+    </tr>
+    <!--
     -->
   </table>
 </form>
