--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -4,34 +4,30 @@ action="https://api-video.facebook.com/method/video.upload">
   <input type="hidden" id="access_token" name="access_token" value=""/>
   <table>
     <tr>
-      <td><label for="title">Title</label></td> 
-      <td><input type"text" id="title" name="title" value=""/></td>
+      <td><label for="list">Video List</label></td>
+      <td>
+        <select id="list" name="list">
+          <option>Volvo</option>
+          <option>Saab</option>
+          <option>Mercedes</option>
+          <option>Audi</option>
+        </select>
+      </td>
     </tr>
     <tr>
-      <td><label for="description">Description</label></td>
-      <td><textarea id="description" name="description"/></textarea></td>
+      <td><label for="title">Video Title</label></td> 
+      <td><input id="title" name="title" type="text" size="30" value=""/></td>
     </tr>
     <tr>
-      <td><label for="file">Upload a file</label></td>
-      <td><input type="file" name="file" id="file" size="30"/>
+      <td><label for="file">Video File</label></td>
+      <td><input name="file" id="file" type="file" size="20"/>
     </tr>
     <tr>
       <td></td>
-      <td><input type="submit" value="Start Upload"/></td>
+      <td><button onclick="submit_video()">Submit</button></td>
     </tr>
-    <!--
-    -->
   </table>
 </form>
-<button onclick="submit_video()">Submit</button>
 <script> 
   $('#access_token').val( FB.getSession().access_token );
-  /*
-  document.getElementById("video-upload").onsubmit=function() {
-    document.getElementById("upload_target").onload = function(){ alert('file upload success') };
-  }
-  function submit_video()
-  {
-    $('#upload_target')
-  } */
 </script>
