--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -2,6 +2,7 @@
 
 action="https://api-video.facebook.com/method/video.upload">
   <input type="hidden" id="access_token" name="access_token" value=""/>
+  <h2>Upload a Video</h2>
   <table>
     <tr>
       <td><label for="list">Video List</label></td>
