working on upload form styles

--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -8,10 +8,7 @@ action="https://api-video.facebook.com/method/video.upload">
       <td><label for="list">Video List</label></td>
       <td>
         <select id="list" name="list">
-          <option>Volvo</option>
-          <option>Saab</option>
-          <option>Mercedes</option>
-          <option>Audi</option>
+          <option>News Feed</option>
         </select>
       </td>
     </tr>
