working on upload form styles

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -35,7 +35,7 @@ button {
 p { padding: 3px 0; }
 
 h1 { font-size: 30px; font-weight: bold; }
-h2 { font-size: 20px; font-weight: bold; color: #7FFF24; padding-bottom: 10px; }
+h2 { font-size: 20px; font-weight: bold; color: #FBB829; padding-bottom: 10px; }
 
 input {
   width: 100%; 
