--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -37,6 +37,7 @@ p { padding: 3px 0; }
 h1 { font-size: 30px; font-weight: bold; }
 h2 { font-size: 20px; font-weight: bold; color: #FBB829; padding-bottom: 10px; }
 
+label { padding-right: 10px; padding: 5px 0; }
 input {
   width: 100%; 
   color: #FBB829;
