--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -1,6 +1,5 @@
-<form id="video-upload" method="post"   encoding="multipart/form-data" enctype="multipart/form-data" 
-
-action="https://api-video.facebook.com/method/video.upload">
+<form id="video_upload" method="post" encoding="multipart/form-data" enctype="multipart/form-data" 
+ action="https://api-video.facebook.com/method/video.upload">
   <input type="hidden" id="access_token" name="access_token" value=""/>
   <h2>Upload a Video</h2>
   <table>
