--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -35,9 +35,9 @@ button {
 p { padding: 3px 0; }
 
 h1 { font-size: 30px; font-weight: bold; }
-h2 { font-size: 20px; font-weight: bold; color: #FBB829; padding-bottom: 10px; }
+h2 { font-size: 20px; font-weight: bold; color: #FBB829; padding-bottom: 15px; }
 
-label { height:2em; line-height:2em; padding:5px 20px 5px 0; }
+label { height:2em; line-height:2em; padding:5px 25px 5px 15px; }
 input {
   width: 100%; 
   color: #FBB829;
@@ -84,7 +84,7 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
   position:relative;
 }
 
-#video_upload { width: 500px; }
+#video_upload { width: 450px; }
 
 #player-page { width: 950px; margin: 0px auto; }
 #player-page h1 { margin: 1em 75px 0; color: #FBB829; }
