working on upload form styles

--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -1,16 +1,8 @@
 <form id="video_upload" method="post" encoding="multipart/form-data" enctype="multipart/form-data" 
  action="https://api-video.facebook.com/method/video.upload">
   <input type="hidden" id="access_token" name="access_token" value=""/>
-  <h2>Upload a Video</h2>
+  <h2>Upload a Video to "News Feed"</h2>
   <table>
-    <tr>
-      <td><label for="list">Video List</label></td>
-      <td>
-        <select id="list" name="list">
-          <option>News Feed</option>
-        </select>
-      </td>
-    </tr>
     <tr>
       <td><label for="title">Video Title</label></td> 
       <td><input id="title" name="title" type="text" size="30" value=""/></td>
