--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -37,7 +37,8 @@ p { padding: 3px 0; }
 h1 { font-size: 30px; font-weight: bold; }
 h2 { font-size: 20px; font-weight: bold; color: #FBB829; padding-bottom: 15px; }
 
-label { height:2em; line-height:2em; padding:5px 25px 5px 15px; }
+tr { min-height: 2em; line-height: 2em; }
+label { padding:5px 25px 5px 15px; }
 input {
   width: 100%; 
   color: #FBB829;
