working on upload form styles

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -86,6 +86,7 @@ ul.news-feed li { padding: 10px 15px; border-bottom: 1px solid #7FFF24; }
 }
 
 #video_upload { width: 450px; }
+#video_upload button { margin-bottom:5px; margin-top:15px; float: right; }
 
 #player-page { width: 950px; margin: 0px auto; }
 #player-page h1 { margin: 1em 75px 0; color: #FBB829; }
