--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -38,7 +38,7 @@ h1 { font-size: 30px; font-weight: bold; }
 h2 { font-size: 20px; font-weight: bold; color: #FBB829; padding-bottom: 15px; }
 
 tr { min-height: 2em; line-height: 2em; }
-label { display: block; padding:5px 25px 5px 15px; }
+label { display: block; padding: 0 25px 0 15px; }
 input {
   width: 100%; 
   color: #FBB829;
