--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -11,8 +11,8 @@
       <td><label for="file">Video File</label></td>
       <td>
         <div style="position: relative;">
-          <input type="text" size="20" value="Choose a file to upload"/>
           <input style="z-index: 2; opacity: 0;" name="file" id="file" type="file" size="20"/>
+          <input style="position: absolute" type="text" size="20" value="Choose a file to upload"/>
         </div>
       </td>
     </tr>
