--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -9,9 +9,11 @@
     </tr>
     <tr>
       <td><label for="file">Video File</label></td>
-      <td style="position: relative;">
-        <input style="position: absolute" type="text" size="20" value="Choose a file to upload"/>
-        <input style="position: absolute; z-index: 2; opacity: 0;" name="file" id="file" type="file" size="20"/>
+      <td>
+        <div style="position: relative;">
+          <input style="position: absolute" type="text" size="20" value="Choose a file to upload"/>
+          <input style="position: absolute; z-index: 2; opacity: 0;" name="file" id="file" type="file" size="20"/>
+        </div>
       </td>
     </tr>
     <tr>
