working on upload form styles

--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -10,7 +10,7 @@
     <tr>
       <td><label for="file">Video File</label></td>
       <td>
-        <div style="position: relative;">
+        <div class="clearfix" style="position: relative;">
           <input style="position: absolute" type="text" size="20" value="Choose a file to upload"/>
           <input style="position: absolute; z-index: 2; opacity: 0;" name="file" id="file" type="file" size="20"/>
         </div>
