--- a/app/views/upload.html
+++ b/app/views/upload.html
@@ -12,7 +12,7 @@
       <td>
         <div class="clearfix" style="position: relative;">
           <input style="position: absolute; cursor: pointer" type="text" size="20" value="Choose a file to upload"/>
-          <input style="position: absolute; z-index: 2; opacity: 0;" name="file" id="file" type="file" size="20"/>
+          <input style="position: absolute; cursor: pointer; z-index: 2; opacity: 0;" name="file" id="file" type="file" size="20"/>
         </div>
       </td>
     </tr>
