Working on list page now.

--- a/app/views/wall.html
+++ b/app/views/wall.html
@@ -2,7 +2,7 @@
 {% block body %}
   {% include "_/navbar.html" %}
 
-<div id="wall">
+<div id="wall" class="clearfix">
 
   <div class="left feed">
     <div class="clearfix">
